[gd_scene load_steps=22 format=2]

[ext_resource path="res://actor/Swarm/SwarmActor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor/Swarm/Miner/Miner.gd" type="Script" id=2]
[ext_resource path="res://assets/img/ally_ship/Ship_05.png" type="Texture" id=3]
[ext_resource path="res://assets/img/effects/white_glowing_circle.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/rumble_f_001.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 1.86201, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -90.0
scale = 0.04
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=6]

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Particles2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.567045 ), 0.0, 0.0, 0, 0, Vector2( 0.429658, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.121591 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 9 )
color = Color( 1.4, 0, 0, 1 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.505703, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 60, 12, 1 )
flag_align_y = true
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 50.0
tangential_accel_random = 1.0
scale = 0.05
scale_curve = SubResource( 12 )
color = Color( 1.4, 0, 0, 1 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.475285, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 30.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.15
scale_curve = SubResource( 15 )
color = Color( 1.4, 0, 0, 1 )

[node name="Miner" instance=ExtResource( 1 )]
script = ExtResource( 2 )
starting_health = 100
turning_speed = 1000
stop_distance = 100

[node name="Laser" type="Line2D" parent="." index="0"]
visible = false
points = PoolVector2Array( 0, 0, 24, 0 )
width = 3.0
default_color = Color( 1.4, 0.07, 0.07, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Sprite" parent="." index="2"]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 3 )

[node name="Particles2D" parent="." index="4"]
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="5"]
anims/landing = SubResource( 6 )
anims/takeoff = SubResource( 7 )

[node name="LifeBar" parent="GUI" index="0"]
margin_left = -4.90974
margin_top = -25.0301
margin_right = 5.09026
margin_bottom = -23.0301

[node name="Particles2D2" type="Particles2D" parent="." index="9"]
position = Vector2( 16, 0 )
emitting = false
amount = 16
lifetime = 0.3
process_material = SubResource( 10 )
texture = ExtResource( 4 )

[node name="Particles2D3" type="Particles2D" parent="." index="10"]
emitting = false
amount = 30
lifetime = 0.5
preprocess = 1.0
randomness = 1.0
process_material = SubResource( 13 )
texture = ExtResource( 4 )

[node name="Particles2D4" type="Particles2D" parent="." index="11"]
emitting = false
amount = 16
lifetime = 0.2
process_material = SubResource( 16 )
texture = ExtResource( 4 )

[node name="CollectingTimer" type="Timer" parent="." index="14"]
wait_time = 10.0

[node name="AudioStreamShot" parent="." index="15"]
stream = ExtResource( 5 )
volume_db = -12.0
max_distance = 1000.0
[connection signal="timeout" from="CollectingTimer" to="." method="_on_CollectingTimer_timeout"]
